styles/styles-home.css
html {
    height: 100%;
    scroll-behavior: smooth;
    font-size: 62.5%;
  }
  
* {
    margin: 0;
    padding: 0;
}

:root {
    --light-blue-bg: #008db5;
    --dark-blue-bg: #003543;
    --red-main: #85222c;
    --blue-main: #005b6c;
    --cream-white: #fdf9f6;
    --border-distance: 5rem;
    --modal-height: 30%;
}

@font-face {
    font-family: 'opti-jake-osf';
    src: URL('/fonts/opti-jake-osf.otf') format('opentype');
}
@font-face {
    font-family: 'itc-grouch';
    src: url('/fonts/itc-grouch.otf') format('opentype');
}

@font-face {
    font-family: 'ubuntu-regular';
    src: url('/fonts/ubuntu-regular.ttf') format('truetype');

}
@font-face {
    font-family: 'digital-dream';
    src: URL('/fonts/digital-dream.regular.ttf') format('truetype');
    /* https://www.1001fonts.com/digital-dream-font.html#license */
}

h1 {
    color: var(--cream-white);
    margin-bottom: calc(var(--border-distance) / 2);
    text-align: center;
    font-size: var(--border-distance);
}

p {
    margin-bottom: 1em;
  }


  

#home-body{
    height: 100vh;
    width: 100%;
    opacity: 0;
    transition: opacity 1s;
    background-attachment: fixed;
    background-image: linear-gradient(var(--red-main), var(--light-blue-bg), var(--dark-blue-bg));
}

#top {
    left: 0;
    right: 0;
    top: 0;
    height: var(--border-distance);
    z-index: 999;
    text-align: center;
    line-height: var(--border-distance);
}


#header-wrapper{
    margin: 0 auto 0 auto;
    display: flex;
    flex-direction: row;
    width: calc(100% - (2 * var(--border-distance)));
    height:100%;
}


#left, #right {
    top: 0;
    height: 100vh;
    bottom: 0;
    width: var(--border-distance);
}

#left {
    left: 0;
}

#right {
    right: 0;
}

#bottom {
    left: 0;
    right: 0;
    bottom: 0;
    height: var(--border-distance);
    z-index: 999;
    text-align: center;
    vertical-align: middle;
    line-height: var(--border-distance);
}

#bottom, #left, #right, #top {
    background: var(--cream-white);
    position: fixed;
}

#bottom a img {
    height: calc(var(--border-distance) * (3 / 4));
    padding: calc(var(--border-distance) / 8);
}

#menuToggle{
    display: none;
}


.header ul{
    font-size: 0;
}

.header ul li{
    padding-left: calc(var(--border-distance) / 4);
    padding-right: calc(var(--border-distance) / 4);
    list-style: none;
    display: inline-block;
}

.header ul li a{
    text-decoration: none;
    font-family: opti-jake-osf;
    color: black;
    font-size: calc(var(--border-distance) * 0.6);
}

.header ul span{
    display: inline-block;
    width: calc(var(--border-distance) / 8);
    font-size: calc(var(--border-distance) * 0.6);
}

.header-icon {
    height: calc(var(--border-distance) / 1.5);
    display: block;
    padding: calc(var(--border-distance)/6);
}

.navigation {
    flex: 2;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    line-height: normal;
}


.header-icons {
    flex: 1;
    display: flex;
    align-items: center;
    font-size: 0;
    line-height: normal;
}

.left{
    justify-content: flex-start;
}

.right{
    justify-content: flex-end;
}

span.avoidwrap {
    display: inline-block;
}

.hidden {
    opacity: 0;
}

.clickable {
    cursor: pointer;
    transition: 0.3s;
}

.clickable:hover{
    filter: invert(100%);
    background-color: var(--cream-white);
}

.stop-scrolling {
    height: 100%;
    overflow: hidden;
}

.uncover{
    animation: uncover 1s;
}


@keyframes uncover {
    from { opacity: 0; }
    to { opacity: 1}
}


#content-footer-wrapper{
    display: flex;
    min-height: calc(100vh - var(--border-distance));
    width: calc(100% - 2 * var(--border-distance));
    flex-direction: column;
    position: relative;
    top: var(--border-distance);
    left: var(--border-distance);
    justify-content: space-between;
}

#content{
    display: flex;
    flex-direction: column;
    align-items: center;
}

#content > div{
    padding-bottom: calc(3 * var(--border-distance));
}

#content h1{
    margin-top: 10vw;
}


#home-footer{
    width: 100%;
    color: var(--cream-white);
    box-sizing: border-box;
    font-size: calc(var(--border-distance) / 3);
    text-align: center;
    border-top: 2px double var(--cream-white);
    border-bottom: 2px double var(--cream-white);
    margin-bottom: calc(1.25 * var(--border-distance));
}


#home-footer ul .item{
    font-family: opti-jake-osf;
    cursor: pointer;
}


@media(min-aspect-ratio: 1700/835){
    #banner-img{
        margin-top: -25px !important;
    }
}


@media (max-aspect-ratio: 4000/2410) {
    #banner-img { /*Keeps the banner image on fullscreen when the viewport becomes narrower*/
        height: calc(100vh - 2 * var(--border-distance));
        width: auto !important;
    }
}
@media (max-aspect-ratio: 4000/2460) {
    #banner-img{ /*Keeps the banner image in the center when the viewport becomes narrower*/
        margin-left: calc(0px - ((16/9 * (100vh - 2 * var(--border-distance)) - 100%))/2) !important;
        margin-right: 0 !important;
    }
}

@media (max-aspect-ratio: 1000/858) {
    #banner-img{
        margin: auto !important;
        width: calc(100% - 2 * var(--border-distance)) !important;    
        height: auto !important;
    }
}

@media (max-aspect-ratio: 450/735) {
    #banner-img{
        height: calc(100vh - 2 * var(--border-distance)) !important;
        width: auto !important;
    }
}

@media (max-aspect-ratio: 450/853) {
    #banner-img{
        height: auto !important;
        width: calc(100% - 2 * var(--border-distance)) !important;
    }
}


@media (max-width: 1400px) {
    #home-body h1 {
        font-size: 4vw !important;
    }
}
/* ... */

